# SpeedTest

./: .travis.yml  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
src/: MD5Util.cpp  Makefile.am  Makefile.in  SpeedTest.cpp  SpeedTestConfig.h  main.cpp
